k8sconfig/llmeng-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llmeng-ingress
  annotations:
    # Use GCE Ingress controller"
    spec.ingressClassName: "gce"
    #kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: llmeng-managed-cert # Use the Managed Certificate created in llmeng-certificate.yaml
    kubernetes.io/ingress.allow-http: "false" # Change to "true" if you want to allow HTTP traffic
    #force-redeploy: "true"
spec:
  rules:
  - host: rameshmullangi.com # Replace with domain or nip.io address
    http:
    # - your-domain.com # Uncomment and set your domain if you have one
      paths:
      - path: /llmchat # Route all traffic to the root path
        pathType: Prefix
        backend:
          service:
            name: llmchat-service # Name of your LLMChat Service
            port:
              number: 7861 # This is the port on which the LLMChat Service defined in llmeng-service.yaml listens (ports.port entry)
